--- a/base/public/css/registrar_libreria.css
+++ b/base/public/css/registrar_libreria.css
@@ -141,4 +141,16 @@ footer{
     padding: 1rem;
 }
 
+#txtIdExiste{
+    color: tomato;
+    text-align: center;
+    display: block;
+}
+
+#txtCorreoExiste{
+    color: tomato;
+    text-align: center;
+    display: block;
+}
+
 /* FIN main */
