--- a/base/public/css/visualizar_perfil_admin_libreria.css
+++ b/base/public/css/visualizar_perfil_admin_libreria.css
@@ -50,6 +50,8 @@ main{
 .izquierda{
     float: left;
     padding: 20px;
+    text-align: center;
+    width: 400px;
 }
 
 .derecha{
@@ -61,13 +63,13 @@ main{
 
 .nombre{
     color: #76323F;
-    font-size: 20px;
+    font-size: 30px;
     font-weight: bold;
     margin: 30px;
 }
 
 .dato{
     color: #76323F;
-    font-size: 30px;
+    font-size: 20px;
     margin: 30px;
 }
