--- a/base/public/css/listar_librerias.css
+++ b/base/public/css/listar_librerias.css
@@ -33,8 +33,15 @@ nav ul li a{
     color: #D7CEC7;
 }
 
-.cerrar_sesion{
+nav ul li #btn_cerrar{
+    text-decoration: none;
+    display: inline-block;
+    padding: 5px;
+    margin: 10px;
+    color: #D7CEC7;
     border: 1px solid #D7CEC7;
+    background: none;
+    outline: none;
 }
 
 main{
@@ -46,3 +53,60 @@ h1{
     font-size: 30px;
     margin: 30px;
 }
+
+label{
+    color: #76323F;
+    font-size: 20px;
+    margin: 30px;
+}
+
+input{
+    width: 60%;
+    height: 30px;
+    margin: 20px;
+    padding: 5px;
+    border: 1px solid #76323F;
+    border-radius: 15px;
+    background: none;
+    outline: none;
+}
+
+a{
+    padding: 10px;
+    border: 1px solid #76323F;
+    border-radius: 15px;
+    font-size: 15px;
+    color: #76323F;
+    font-weight: bold;
+    background: none;
+    outline: none; 
+    text-decoration: none;
+}
+
+main button{
+    padding: 10px;
+    border: 1px solid #76323F;
+    border-radius: 15px;
+    font-size: 15px;
+    color: #76323F;
+    font-weight: bold;
+    background: none;
+    outline: none; 
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th, td {
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even){background-color: #f2f2f2}
+  
+  th {
+    background-color: #76323F;
+    color: white;
+  }
