--- a/base/public/css/navbar.css
+++ b/base/public/css/navbar.css
@@ -1,27 +1,58 @@
-
-header{
-    height:60px;
-    background-color:#76323f;
-}
-#navi{
-    padding:10px 20px;
-}
-#navi img{
-    float:left;
-    width:50px;
-}
-
-.sesion,#unirse_Club{
-    margin:10px 5px 10px 839px;
-    padding:5px 10px;
-    background-color:#d7cec7;
-    border:solid 0;
-    float:left;
-    border-radius:5px;
-}
-
-.sesion:hover,#unirse_Club:hover{
-    opacity:0.9;
-    color:white;
-    background-color:#c09f80;
-}
+html {
+    min-width: 360px;
+    max-width: 1024px;
+    margin: auto;
+  }
+  
+  body {
+    font-family: 'Catamaran', sans-serif;
+  }
+  
+  /*Nav bar styles #76323f;*/
+  header {
+    background-color: #76323f;
+    display: inline-block;
+    width: 100%;
+    max-width: 1024px;
+    margin: 0;
+  }
+  
+  header a {
+    text-decoration: none;
+    color: white;
+    padding: 0 5px;
+    font-size:10px;
+  }
+  
+  header a:hover {
+    color: #aaaaaa
+  }
+  
+  header .logoBambooks {
+    float: left;
+    margin: 10px 40px;
+  }
+  
+  header .nav-container {
+    float: left;
+    margin-top: 15px;
+  }
+  
+  header .optionsNav {
+    float: right;
+    font-size: 10px;
+    margin: 15px 40px 0 90px;
+  }
+  
+  .dropdown-content {
+    display: none;
+  }
+  .optionsNav button {
+    margin-left:50px;
+  }
+  
+  .optionsNav img {
+    position: absolute;
+    margin: -5px 10px 0 10px;
+  }
+  
