--- a/base/public/css/clubLectura.css
+++ b/base/public/css/clubLectura.css
@@ -12,9 +12,19 @@
      }
      #buscarClub{
          width:250px;
-         border:none;
+         border:solid 1px #3d1e24;
          padding:8px;
+         
      }
+
+     #btnBuscarClub{
+         background-color:#76323f;
+         color:#fff;
+         width:20%;
+         border-radius:5px; 
+        padding:5px 10px;
+     }
+     
      .filtrar label{
          font-size:0px;
      }
@@ -39,26 +49,28 @@
          background-color: #3d1e24;   
      }
      
- 
-     #clubes img,#RegistrarClubScreen img{
-         width:75px;
-         float:left; 
-         margin:35px 20px 0 20px;
-     }
- 
      .club{
-         float:left;
-         background-color:#76323f;
-         width:45%;
-         height:150px;
-         margin:10px 20px;
-         border-radius: 15px;
-     }
+        float:left;
+        background-color:#76323f;
+        width:45%;
+        height:150px;
+        margin:10px 20px;
+        border-radius: 15px;
+    }
+     #clubes img,#RegistrarClubScreen img{
+         width:10%;
+         float:left; 
+         margin:45px 20px 0 20px;
+         
+     }    
  
      .club-info{
+         width:80%;
          float:left; 
          font-size:10px;
+         height:90px;
          color:#d7cec7;
+         margin:20px 0 23px 0;
      }
  
      .club-info h1{
@@ -67,7 +79,7 @@
          width:210px;
      }
  
-     .club-info h3{
+     .club-info p{
          margin:2px 0;
      }
 
@@ -123,8 +135,6 @@
         display:flow-root;
     }
 
-
-
     .btnsForm{
         display:flow-root;
         width:100%;
@@ -144,11 +154,20 @@
         width:100%;
     }
 
-    .unirse_Club{
-        margin:95px 0 0 25px;
+    .unirse_Club,.crear_Evento{
+        float:left;
+        width:50%;
     }
 
-    .unirse_Club:hover{
+    .unirse_Club{
+        border-bottom-left-radius:15px;
+    }
+
+    .crear_Evento{
+        border-bottom-right-radius:15px;
+    }
+
+    .unirse_Club:hover,.crear_Evento:hover{
         background-color:#c09f80;
     }
     
