--- a/base/public/css/registrar_libro.css
+++ b/base/public/css/registrar_libro.css
@@ -111,7 +111,9 @@ iframe{
 }
 #img_preview{
     width: 100%;
-    border-radius: 15px;
+    height: 100%;
+    border-radius: 15px 15px 0px 0px;
+    margin-bottom: 0px;
 
 }
 .boton_subir_imagen{
