--- a/base/public/css/ver-perfil-usuario.css
+++ b/base/public/css/ver-perfil-usuario.css
@@ -1,41 +1,4 @@
-body{
-    width: 1024px;
-    margin: 0 auto;
-}
 
-nav{
-    height: 50px;
-    background-color: #76323F;
-}
-
-nav img{
-    height: 40px;
-    margin-top: 5px;
-    margin-left: 10px;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    float: right;
-}
-  
-nav ul li {
-    display: inline;
-}
-
-nav ul li a{
-    text-decoration: none;
-    display: inline-block;
-    padding: 5px;
-    margin: 10px;
-    color: #D7CEC7;
-}
-
-.cerrar_sesion{
-    border: 1px solid #D7CEC7;
-}
 
 main{
     text-align: center;
@@ -59,7 +22,7 @@ p span{
     color: black
 }
 
-button
+main button
     {
         margin: 50px 0;
         padding: 10px;
@@ -72,7 +35,7 @@ button
         outline: none;
     }
 
-    button:hover{
+main button:hover{
         margin: 50px 0;
         padding: 10px;
         border: 2px solid #76323F;
