--- a/base/public/css/clubLectura.css
+++ b/base/public/css/clubLectura.css
@@ -1,11 +1,5 @@
 
-    .modal-content{
-        width:40%;
-        text-align: center;
-        height:1020px;
-    }
 
-   
      .filtrar{
          float:left;
          margin-left: 15px;
@@ -14,7 +8,6 @@
          width:250px;
          border:solid 1px #3d1e24;
          padding:8px;
-         
      }
 
      #btnBuscarClub{
@@ -57,12 +50,16 @@
         margin:10px 20px;
         border-radius: 15px;
     }
-     #clubes img,#RegistrarClubScreen img{
+     #clubes img{
          width:10%;
          float:left; 
          margin:45px 20px 0 20px;
          
      }    
+
+     #RegistrarClubScreen {
+         text-align: center;
+     }
  
      .club-info{
          width:80%;
@@ -83,9 +80,7 @@
          margin:2px 0;
      }
 
-     .sign-in img{
-         padding-left:150px;
-     }
+     
 
      .sign-in label{
          width:100%;
@@ -184,4 +179,160 @@
         height:25px;
     }
 
+    
+
+.sesion:hover,#unirse_Club:hover{
+    opacity:0.9;
+    color:white;
+    background-color:#c09f80;
+}
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+      text-align: center;
+    background-color: #d7cec7;
+    margin: auto;
+    padding:20px;
+    border: 1px solid #888;
+    width: 55%;
+    height:1750px;
+    text-align: center;
+  }
+  
+  .sign-in{
+      margin-top:10px;
+  }
+
+  .sign-in h1{
+      margin-bottom:15px;
+      margin-left:25px;
+  }
+  .sign-in img{
+      width:128px;
+      margin-bottom:15px;
+  }
+  form{
+      padding:10px 0;
+      margin:auto;
+
+  }
+  form label{
+      display:inline-block;
+      font-size:13px;
+      margin:10px 0;
+  }
+
+  form input{
+      padding:7px 5px;
+      width:200px;
+      border-style:none;
+      margin-bottom:10px;
+  }
+  form input:focus{
+      border:solid 1px #76323f;
+      outline: none;
+  }
+  button:focus{
+    outline: none;
+  }
+
+  
+.forgot a{
+    float:left;
+    width:50%; 
+    font-size:10px;
+    text-decoration: none;
+    color:#76323f;
+    margin-top:10px;
+}
+.forgot a:hover{
+    color:#c09f80;
+    text-decoration: underline;
+}
+#rellene{
+    display:none;
+    color:red;
+    font-size:10px;
+    margin-bottom:10px;
+}
+  /* The Close Button */
+  .close {
+    
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .sign-in .line{
+
+    margin:auto;
+    background-color:#76323f;
+    height:1px;
+    width:85%;
+}
+
+.modal-content button{
+    width:50%;
+    float:left;
+    padding:10px 10px;
+    border:solid 0;
+    display:block;
+}
+
+#btnCancel,.cancel{
+    background-color:#76323f;
+    color:#fff;
+}
+
+
+.modal-content button:hover{
+   opacity:0.8;
+}
+
+
+  
+  
+  /* Add some content at the bottom of the video/page */
+  
+  .input_error{
+      border: solid 1px red;
+  }
+
+  .container > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    }
+    
+    #input_error_footer{
+        margin-top:5px;
+        color:#d1a71b;
+        font-size:10px;
+        display:none;
+    
+    }
+    
+      
     
