--- a/base/public/css/visualizarperfil_adminge.css
+++ b/base/public/css/visualizarperfil_adminge.css
@@ -1,45 +1,14 @@
-body{
-    width: 1024px;
-    margin: 0 auto;
+
+.datos{
+color: #76323F;
+font-size: 20px;
+font-weight: bold;
+margin: 30px;
+    
 }
 
-nav{
-    height: 50px;
-    background-color: #76323F;
-}
-
-nav img{
-    height: 40px;
-    margin-top: 5px;
-    margin-left: 10px;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    float: right;
-}
-  
-nav ul li {
-    display: inline;
-}
-
-nav ul li a{
-    text-decoration: none;
-    display: inline-block;
-    padding: 5px;
-    margin: 10px;
-    color: #D7CEC7;
-}
-
-.cerrar_sesion{
-    border: 1px solid #D7CEC7;
-}
-
-h2{
-font-size: 40px;
-padding: 10px;
-font-family:  Helvetica;
-font-style: normal;
+.dato{
+    color: #76323F;
+    font-size: 20px;
+    margin: 20px;
 }
