--- a/base/public/css/listar_libros.css
+++ b/base/public/css/listar_libros.css
@@ -49,7 +49,7 @@ table {
   }
   
   th, td {
-    text-align: left;
+    text-align: center;
     padding: 8px;
   }
   
@@ -61,6 +61,6 @@ table {
   }
 
   .imgTabla{
-      /* margin-top:10px; */
+      margin-top:8%;
       width:100%;
   }
