--- a/base/public/css/ver_perfil_libro.css
+++ b/base/public/css/ver_perfil_libro.css
@@ -1,12 +1,62 @@
-body{
-    width: 1024px;
-    margin: 0 auto;
+main{  
+    text-align: center;
+    
 }
 
-/* FIN nav */
-
-main{
-    display: flow-root;
-    margin-top: 50px;
+#contenedor_titulo{
+    width: 50%;
+    color: #76323F;
+    font-size: 30px;
+    margin: 30px;
+    align-content: flex-end;
     text-align: center;
+    margin-top: 1% solid #76323F; 
+}
+
+.contenedor-perfil {
+    display: flow-root;
+}
+
+#portada{
+    margin-top: 10%;
+    margin-left: 10%;
+    height: 300px;
+    width: 225px;
+    border: solid 1px #76323F;
+    border-radius: 15px;
+    float: left;
+}
+
+.infoPerfil {
+    float: left;
+    margin: 74px 0 0 116px;
+    width: 44%;
+}
+
+#imagen{
+    height: 220px;
+    width: 100%;
+    height:100%;
+    border-radius: 15px 15px;
+}
+#contenedor_infoLibro{
+
+}
+#infoLibro{
+    font-size: 30px;
+    color: #76323F;
+    background: #76323F;
+    border: solid 1px #76323F;
+    border-radius: 15px;
+    width: 100%;  
+}
+
+#infoLibro p{
+    color: #aaaaaa;
+    font-size: 20px;
+    margin: 1%;
+    margin-left: 5%;     
+}
+#btn_regresar{
+    margin-top: 20%;
 }
