--- a/base/public/css/carousels.css
+++ b/base/public/css/carousels.css
@@ -11,7 +11,8 @@ img {vertical-align: middle;}
   position: relative;
   width:410px;
   float:left;
-  margin:10px 20px
+  margin:10px 20px;
+  padding-bottom:50px;
 }
 
 /* Next & previous buttons */
@@ -21,8 +22,7 @@ img {vertical-align: middle;}
   top: 50%;
   width: auto;
   padding: 16px;
-  margin-top:10px;
-  color: white;
+  color: #76323f;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -32,21 +32,22 @@ img {vertical-align: middle;}
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
+  right:  65px;
   border-radius: 3px 0 0 3px;
 }
 
 .prev{
-  left:0; 
+  left: 65px;
 }
 
 .mySlides img,.libroVendido img{
-  height:200px;
-  width:410px;
+  height:310px;
+  width:200px;
 }
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
+  color:#fff;
 }
 
 
