--- a/base/public/css/registrar-evento.css
+++ b/base/public/css/registrar-evento.css
@@ -2,18 +2,55 @@
 main{
     text-align: center;
 }
-.librosLista{
-    width:100%;
-    
-}
 
-#selectLibros{
-    width:30%;
-    margin:auto;
+
+#lista_libros_evento{
+    width:100%;
+    margin:20px 0 ;
     display: inline-block
 }
 
-header{
-    margin-top:-8px;
+#lista_libros_evento select{
+    width:30%;
+    margin:0 15px;
+}
+#lista_libros_evento label{
+    width:100%;
 }
 
+
+h1{
+    font-size:40px;
+    margin:40px 0;
+}
+
+#event_Name{
+    width:50%;
+    padding:10px;
+    margin:10px 0;
+}
+
+.input_error{
+    border: solid 1px red;
+}
+
+#tbl_eventos{
+    margin:auto;
+}
+
+#tbl_eventos th{
+    width:350px;
+    padding:10px;
+    background-color:#76323f;
+   color:#fff;
+   border:solid 1px #fff;
+}
+
+#tbl_eventos tr:nth-child(even){
+    background-color: #f2f2f2;
+}
+
+#tbl_eventos th,#tbl_eventos td{
+    width:350px;
+    padding:10px;
+}
