--- a/base/public/css/ver_perfil_libro.css
+++ b/base/public/css/ver_perfil_libro.css
@@ -9,7 +9,7 @@ main{
     font-size: 30px;
     margin: 30px;
     align-content: flex-end;
-    text-align: center;
+    /* text-align: center; */
     margin-top: 1% solid #76323F; 
 }
 
@@ -58,5 +58,10 @@ main{
     margin-left: 5%;     
 }
 #btn_regresar{
-    margin-top: 20%;
+    margin-top: 5%;
+    background-color:#76323f;
+         color:#fff;
+         width:15%;
+         border-radius:5px; 
+        padding:5px 10px;
 }
