--- a/base/public/css/registrar_cliente.css
+++ b/base/public/css/registrar_cliente.css
@@ -63,9 +63,9 @@ main input{
 }
 
 iframe{
-    width: 60%;
     margin: 15px;
-    height: 200px;
+    width: 300px;
+    height: 160px;
 }
 
 
@@ -114,7 +114,22 @@ main button{
 
 }
 
-footer{
-    background: #76323F;
-    padding: 1rem;
+
+html {
+    min-height: 100%;
+    position: relative;
 }
+
+body {
+    margin: 0;
+    margin-bottom: 40px;
+}
+
+footer {
+    background-color: #76323F;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    color: white;
+  }
