--- a/base/public/css/crear_contrasenna.css
+++ b/base/public/css/crear_contrasenna.css
@@ -7,3 +7,23 @@ main {
 .input_error {
     border: 2px #e74c3c solid !important;
 }
+
+
+html {
+    min-height: 100%;
+    position: relative;
+}
+
+body {
+    margin: 0;
+    margin-bottom: 40px;
+}
+
+footer {
+    background-color: #76323F;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    color: white;
+  }
