--- a/base/public/css/listar_libros.css
+++ b/base/public/css/listar_libros.css
@@ -64,3 +64,23 @@ table {
       margin-top:8%;
       width:100%;
   }
+
+  
+html {
+    min-height: 100%;
+    position: relative;
+}
+
+body {
+    margin: 0;
+    margin-bottom: 40px;
+}
+
+footer {
+    background-color: #76323F;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    color: white;
+  }
