--- a/base/public/css/listar_libros_card.css
+++ b/base/public/css/listar_libros_card.css
@@ -51,3 +51,24 @@
 #lista_libros .card button{
     text-align: center;
 }
+
+
+
+html {
+    min-height: 100%;
+    position: relative;
+}
+
+body {
+    margin: 0;
+    margin-bottom: 40px;
+}
+
+footer {
+    background-color: #76323F;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    color: white;
+  }
