--- a/base/public/css/perfil_admin.css
+++ b/base/public/css/perfil_admin.css
@@ -1,3 +1,23 @@
 .avatar-admin {
     height: 250px;
 }
+
+
+html {
+    min-height: 100%;
+    position: relative;
+}
+
+body {
+    margin: 0;
+    margin-bottom: 40px;
+}
+
+footer {
+    background-color: #76323F;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    color: white;
+  }
