--- a/base/public/css/perfil_libro.css
+++ b/base/public/css/perfil_libro.css
@@ -39,3 +39,23 @@ main{
 .cerrar_sesion{
     border: 1px solid #D7CEC7;
 }
+
+
+html {
+    min-height: 100%;
+    position: relative;
+}
+
+body {
+    margin: 0;
+    margin-bottom: 40px;
+}
+
+footer {
+    background-color: #76323F;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    color: white;
+  }
