--- a/base/public/css/registrar-autor.css
+++ b/base/public/css/registrar-autor.css
@@ -3,11 +3,6 @@
     border: 2px #e74c3c solid !important;
 }
 
-body{
-    width: 1024px;
-    margin: 0 auto;
-}
-
 
 /* INICIO nav */
 
@@ -178,3 +173,23 @@ iframe{
 }
 
 /* FIN main */
+
+
+html {
+    min-height: 100%;
+    position: relative;
+}
+
+body {
+    margin: 0;
+    margin-bottom: 40px;
+}
+
+footer {
+    background-color: #76323F;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    color: white;
+  }
