--- a/base/public/css/registrar_sucursal.css
+++ b/base/public/css/registrar_sucursal.css
@@ -71,3 +71,23 @@ main button{
     background: none;
     outline: none; 
 }
+
+
+html {
+    min-height: 100%;
+    position: relative;
+}
+
+body {
+    margin: 0;
+    margin-bottom: 40px;
+}
+
+footer {
+    background-color: #76323F;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    color: white;
+  }
