--- a/base/public/css/ver_perfil_libro.css
+++ b/base/public/css/ver_perfil_libro.css
@@ -39,9 +39,7 @@ main{
     height:100%;
     border-radius: 15px 15px;
 }
-#contenedor_infoLibro{
 
-}
 #infoLibro{
     font-size: 30px;
     color: #76323F;
@@ -60,3 +58,23 @@ main{
 #btn_regresar{
     margin-top: 20%;
 }
+
+
+html {
+    min-height: 100%;
+    position: relative;
+}
+
+body {
+    margin: 0;
+    margin-bottom: 40px;
+}
+
+footer {
+    background-color: #76323F;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    color: white;
+  }
