--- a/base/public/css/visualizar_perfil_admin_libreria.css
+++ b/base/public/css/visualizar_perfil_admin_libreria.css
@@ -33,3 +33,23 @@ main{
     font-size: 20px;
     margin: 30px;
 }
+
+
+html {
+    min-height: 100%;
+    position: relative;
+}
+
+body {
+    margin: 0;
+    margin-bottom: 40px;
+}
+
+footer {
+    background-color: #76323F;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    color: white;
+  }
