--- a/base/public/css/visualizarperfil_adminge.css
+++ b/base/public/css/visualizarperfil_adminge.css
@@ -12,3 +12,23 @@ margin: 30px;
     font-size: 20px;
     margin: 20px;
 }
+
+
+html {
+    min-height: 100%;
+    position: relative;
+}
+
+body {
+    margin: 0;
+    margin-bottom: 40px;
+}
+
+footer {
+    background-color: #76323F;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    color: white;
+  }
