--- a/base/public/css/landingBamboo.css
+++ b/base/public/css/landingBamboo.css
@@ -158,7 +158,7 @@ main{
     }
     
     .container .galerias {
-    background-color: #62000F;
+    background-color: #c9c9ff;
       color:white;
       text-align: center
     }
@@ -225,7 +225,7 @@ main{
     
     .footer{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows:300px 5 ;
     color:#000;
     text-align:center;
