--- a/base/public/css/crear_contrasenna.css
+++ b/base/public/css/crear_contrasenna.css
@@ -11,6 +11,13 @@ main {
 
 main div {
 
+    width: 100%;
+    text-align: center;
+
+
+
+}
+
 html {
     min-height: 100%;
     position: relative;
@@ -29,7 +36,7 @@ footer {
     text-align: center;
 
 }
-input{
+main input{
 
     width: 60%;
     height: 30px;
