--- a/base/public/css/listar_tarjetas.css
+++ b/base/public/css/listar_tarjetas.css
@@ -1,9 +1,20 @@
-#listar_tarjetas .card {
-    margin: 0px;
-    background: #76323F;
-    color: #D7CEC7;
-    text-align: center;
-}
+table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th, td {
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even){background-color: #f2f2f2}
+  
+  th {
+    background-color: #76323F;
+    color: white;
+  }
+
 
 
 html {
