--- a/base/public/css/registrar_tarjeta.css
+++ b/base/public/css/registrar_tarjeta.css
@@ -38,7 +38,7 @@ visibility: hidden;
     background: #D7CEC7;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
     border-radius: 3px;
-    padding: 20px;
+    padding: 40px;
     text-align: center;
     width: 400px;
 }
@@ -83,24 +83,20 @@ visibility: hidden;
     }
     
     
-
-
-
-    html {
-        min-height: 100%;
-        position: relative;
-    }
-    
-    body {
-        margin: 0;
-        margin-bottom: 40px;
-    }
-    
-    footer {
-        background-color: #76323F;
-        position: absolute;
-        bottom: 0;
+    table {
+        border-collapse: collapse;
         width: 100%;
-        height: 20px;
+      }
+      
+      th, td {
+        text-align: left;
+        padding: 8px;
+      }
+      
+      
+      th {
+        background-color: #76323F;
         color: white;
       }
+    
+    
