--- a/base/public/css/registrar_genero.css
+++ b/base/public/css/registrar_genero.css
@@ -1,5 +1,9 @@
 
+body{
+    text-align: center;
+    margin: 300px,left;
 
+}
 .btn-registrar-genero{
     padding: 5px;
     margin: 20px;
@@ -87,14 +91,21 @@ visibility: hidden;
     
 
     }
-#generos_lista{
+
+p{
     background-color: #76323F;
-    width:20%;
-    color:#fff;
+    color: white;
+    text-align: center;
+    padding: 8px;
+    width:170px;
+    border-radius: 10px;
+    margin:10px 0;
+    
 }
 
-
-
+p:hover{
+    opacity: 0.7;
+}
 html {
     min-height: 100%;
     position: relative;
@@ -103,6 +114,12 @@ html {
 body {
     margin: 0;
     margin-bottom: 40px;
+    text-align: center;
+}
+
+#generos_lista{
+    margin:auto;
+    margin-top:45px;
 }
 
 footer {
