--- a/base/public/css/registrar_tarjeta.css
+++ b/base/public/css/registrar_tarjeta.css
@@ -82,7 +82,24 @@ visibility: hidden;
     text-align: center;
     }
     
-    
+    table {
+        border-collapse: collapse;
+        width: 100%;
+        border: 1px solid black;
+        margin: 300px,left;
+      }
+      
+      th, td {
+        text-align: left;
+        padding: 8px;
+      }
+      
+      tr:nth-child(even){background-color: #f2f2f2}
+      
+      th {
+        background-color: #76323F;
+        color: white;
+      }
 
 
 
