--- a/base/public/css/registrar_sucursal.css
+++ b/base/public/css/registrar_sucursal.css
@@ -5,7 +5,7 @@ main{
 }
 
 h1{
-    color: #76323F;
+    color: #4ABDAC;
     font-size: 30px;
     font-weight: bold;
     margin: 30px;
@@ -23,35 +23,40 @@ h1{
     text-align: center;
 }
 
+label{
+    color: #4ABDAC;
+    width: 100px;
+    display: inline-block;
+    font-weight: bolder;
+}
+
 input{
-    width: 60%;
+    width: 400px;
     height: 30px;
     margin: 15px;
     padding: 5px;
-    border: 1px solid #76323F;
+    border: 2px solid #4ABDAC;
     border-radius: 15px;
     background: none;
     outline: none;
+    display: inline-block;
 }
 
 textarea{
-    width: 60%;
+    width: 400px;
     height: 80px;
-    margin: 15px;
+    margin: 15px 0 0 0;
     padding: 5px;
-    border: 1px solid #76323F;
+    border: 2px solid #4ABDAC;
     border-radius: 15px;
     background: none;
     outline: none;
     resize: none;
+    display: inline-block;
 }
 
 .input_error {
     border: 2px #e74c3c solid !important;
-}
-
-::-webkit-input-placeholder{
-    color: #76323F;
 }
 
 iframe{
@@ -63,10 +68,10 @@ iframe{
 main button{
     margin: 50px 0;
     padding: 10px;
-    border: 2px solid #76323F;
+    border: 2px solid #4ABDAC;
     border-radius: 15px;
     font-size: 20px;
-    color: #76323F;
+    color: #4ABDAC;
     font-weight: bold;
     background: none;
     outline: none; 
@@ -80,11 +85,10 @@ html {
 
 body {
     margin: 0;
-    margin-bottom: 40px;
 }
 
 footer {
-    background-color: #76323F;
+    background-color: #f1c40f;
     position: absolute;
     bottom: 0;
     width: 100%;
