--- a/base/public/css/navbar.css
+++ b/base/public/css/navbar.css
@@ -65,3 +65,34 @@ header .optionsNav {
   padding: 5px;
   margin-left: 60px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+html {
+  min-height: 100%;
+  position: relative;
+}
+
+body {
+  margin: 0;
+}
+
+footer {
+  background-color: #f1c40f;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 20px;
+  color: white;
+}
