--- a/base/public/css/navbar.css
+++ b/base/public/css/navbar.css
@@ -1,61 +1,218 @@
-html {
-    min-width: 360px;
-    max-width: 1024px;
-    margin: auto;
-  }
-  
-  body {
-    font-family: 'Catamaran', sans-serif;
-  }
-  
-  /*Nav bar styles #76323f;*/
-  header {
-    background-color: #76323f;
-    display: inline-block;
-    width: 100%;
-    max-width: 1024px;
-    margin: 0;
-  }
-  
-  header a {
-    text-decoration: none;
-    color: white;
-    padding: 0 5px;
-    font-size:10px;
-  }
-  
-  header a:hover {
-    color: #aaaaaa
-  }
-  
-  header .logoBambooks {
-    float: left;
-    margin: 10px 40px;
-  }
-  
-  header .nav-container {
-    float: left;
-    margin-top: 15px;
-  }
-  
-  header .optionsNav {
-    float: right;
-    font-size: 10px;
-    margin: 15px 40px 0 90px;
-  }
-  
-  .dropdown-content {
-    display: none;
-  }
-  .optionsNav button {
-    margin-left:50px;
-  }
-  
-  .optionsNav img {
-    position: absolute;
-    margin: -5px 10px 0 10px;
-  }
-  
-#optionNavGenero,#optionNavUsuarios,#optionNavCategoria,#optionNavAutores{
-  display:none;
+button{
+  padding:10px 15px; 
+  background-color: #fff;
+  color:#000;
+  border:solid 2px #000;
 }
+
+button:hover{
+  padding:10px 15px; 
+  background-color: #000;
+  color:#fff;
+  border:solid 2px #000;
+}
+* {
+  box-sizing: border-box
+}
+html {
+font-family: 'Roboto', sans-serif;
+width: 1024px;
+}
+
+body {
+background-color: #fff;
+}
+
+main{
+margin:40px auto;
+width:90%;
+}
+
+header {
+background-color: #f6b93b;
+/*#78e08f;*/
+height: 40px;
+padding: 10px 20px 45px 20px;
+overflow-x: auto;
+overflow-y: hidden;
+}
+
+header img {
+float: left;
+margin: 5px 20px;
+}
+
+#barnesLogo {
+margin-top: -10px;
+}
+
+header .sign-in-button {
+float: right;
+margin: 0 10px;
+margin-top: -2px;
+}
+
+.nav-menu {
+margin-top: 40px;
+width: 100%;
+text-align: center;
+}
+
+.nav-menu ul {
+padding: 0;
+margin: 0;
+}
+
+.nav-menu ul li {
+position: relative;
+display: inline-block;
+list-style-type: none;
+margin: 0;
+}
+
+.nav-menu ul li a {
+color: #000;
+text-decoration: none;
+padding: 10px 20px;
+}
+
+.nav-menu ul li a:hover {
+text-decoration: none;
+border-bottom: solid 2px #f6b93b;
+}
+
+nav ul li.parent ul.child {
+display: none;
+}
+
+nav ul li.parent:hover ul.child {
+display: block;
+position: absolute;
+top: 30px;
+background: #fff;
+width: 150px;
+margin: 0;
+padding: 0;
+}
+
+nav ul li.parent ul.child li:hover {
+border-bottom: solid 0;
+}
+
+nav ul li.parent ul.child li a {
+display: block;
+width: 100%;
+}
+
+ul.child li a:hover {
+border: none;
+}
+
+.child li {
+width: 100%;
+}
+
+.child li:hover {
+background-color: #b2bec3;
+color: #f6b93b;
+}
+
+.dropdown-content {
+display: none;
+position: absolute;
+background-color: #f9f9f9;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+z-index: 1;
+}
+
+.dropdown-content a {
+float: none;
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+text-align: left;
+}
+#info-barnes{
+  text-align: center;
+  padding:50px 0;
+  
+}
+
+.sign-in-button button{
+  background-color:transparent;
+  border:0;
+}
+
+.sign-in-button button{
+  cursor:pointer;
+}
+
+/*
+
+
+
+table {
+font-family: arial, sans-serif;
+border-collapse: collapse;
+width: 100%;
+}
+th{
+background-color:#f6b93b;
+text-align: left;
+padding: 15px;
+
+
+}
+td {
+
+text-align: left;
+padding: 8px;
+}
+
+tr{
+background-color:#d3d3d3 ;
+}
+
+tr:nth-child(even) {
+background-color:#fff ;
+}
+
+tr:hover{
+background-color: #4b4b4b;
+color:#fff;
+}
+
+tr:hover th{
+color:#000;
+}
+
+.card{
+margin-top:30px;
+width:250px;
+border: solid 1px #000;
+text-align:center;
+}
+
+.card img{
+border:solid 1px black;
+ margin-top:25px;
+
+}
+
+.card h1{
+width:100%;
+background-color:#f6b93b;
+padding:70px 0 30px 0;
+margin-top:-60px;
+}
+
+a{
+margin:0;
+text-decoration:none;
+color:#000
+
+}
+*/
+
