--- a/base/public/css/visualizar_perfil_libreria.css
+++ b/base/public/css/visualizar_perfil_libreria.css
@@ -1,3 +1,11 @@
+.hovernav{
+    text-decoration: none;
+    border-bottom: solid 2px #f6b93b;
+}
+
+
+
+
 body{
     width: 1024px;
     margin: 0 auto;
@@ -35,3 +43,38 @@ h1{
 }
 
 
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+  
+th, td {
+    text-align: left;
+    padding: 15px;
+}
+  
+tr:nth-child(even){background-color: #f2f2f2}
+  
+th {
+    background-color: #f6b93b;
+    color: white;
+}
+
+html {
+    min-height: 100%;
+    position: relative;
+}
+
+body {
+    margin: 0;
+    margin-bottom: 40px;
+}
+
+footer {
+    background-color: #f6b93b;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    color: white;
+}
