--- a/base/public/css/navbar.css
+++ b/base/public/css/navbar.css
@@ -1,4 +1,4 @@
-button{
+/*button{
   padding:10px 15px; 
   background-color: #fff;
   color:#000;
@@ -10,7 +10,7 @@ button:hover{
   background-color: #000;
   color:#fff;
   border:solid 2px #000;
-}
+}*/
 * {
   box-sizing: border-box
 }
