--- a/base/public/css/registrar_genero.css
+++ b/base/public/css/registrar_genero.css
@@ -5,14 +5,31 @@ body{
 
 }
 .btn-registrar-genero{
-    padding: 5px;
-    margin: 20px;
-    background-color: #76323F;
-    margin-left: 900px;
-    margin-right: 20px;
+    padding: 10px;
+    border: 2px solid #000;
+    font-size: 15px;
     color: #fff;
+    font-weight: bold;
+    background: #000;
+    outline: none; 
+    margin: 20px;
+    float: right;
     cursor: pointer;
+  
+    
+    }
 
+.btn-registrar-genero:hover{
+    padding: 10px;
+    border: 2px solid #f6b93b;
+    font-size: 15px;
+    color: #fff;
+    font-weight: bold;
+    background: #f6b93b;
+    outline: none; 
+    margin: 20px;
+    float: right;
+    cursor: pointer;
 }
 /*pop up*/
 
@@ -39,7 +56,7 @@ visibility: hidden;
 }
 
 .popup{
-    background: #D7CEC7;
+    background: rgb(240, 238, 236);
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
     border-radius: 3px;
     padding: 20px;
@@ -55,7 +72,7 @@ visibility: hidden;
     font-weight: bold;
     line-height: 16px;
     text-align: right;
-    margin-left: 285px;
+    margin-left: 235px;
   }
   
   .close:hover,
@@ -72,10 +89,25 @@ visibility: hidden;
     height: 50px;
     padding: 5px;
     margin: 20px;
-    background-color: #76323F;
+    background-color: #000;
     border: none;
 
 }
+
+.agregar:hover {
+    color: #f6b93b;
+font-size: 16px;
+width: 125px;
+height: 50px;
+padding: 5px;
+margin: 20px;
+background-color: #000;
+border: none;
+
+}
+
+
+
 
 
 .popup form .contenedor-inputs input{
