--- a/base/public/css/registrar_tarjeta.css
+++ b/base/public/css/registrar_tarjeta.css
@@ -52,7 +52,7 @@ visibility: hidden;
 }
 
 .popup{
-    background: #D7CEC7;
+    background: rgb(240, 238, 236);
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
     border-radius: 3px;
     padding: 40px;
@@ -67,7 +67,8 @@ visibility: hidden;
     font-weight: bold;
     line-height: 16px;
     text-align: right;
-    margin-left: 385px;
+    margin-left: 310px;
+    margin-bottom: 20px;
   }
 
   .close:hover,
@@ -84,9 +85,21 @@ visibility: hidden;
     height: 50px;
     padding: 5px;
     margin: 20px;
-    background-color: #76323F;
+    background-color: #000;
     border: none;
 
+}
+
+.agregar:hover {
+  padding: 5px;
+    border: 2px solid #f6b93b;
+    font-size: 15px;
+    color: #fff;
+    font-weight: bold;
+    background: #f6b93b;
+    outline: none; 
+    margin: 20px;
+    cursor: pointer;
 }
 
 
