--- a/base/public/css/footer.css
+++ b/base/public/css/footer.css
@@ -2,15 +2,14 @@
   #footer {
     margin-top: 30px;
     text-align: center;
-    background-color: #f6b93b;
+    background-color: #000;
     display: flow-root;
   }
 
   #footer>div {
     width: 30%;
-    background-color: #f6b93b;
     float: left;
-    border-left: solid 2px #000;
+    border-left: solid 2px #fff;
     margin: 30px 0px 0 0;
   }
 
@@ -25,7 +24,6 @@
   }
   #footer .socials{
     width:100%;
-    background-color: #f6b93b;
     float: left;
     padding:20px 0;
     margin:0;
@@ -39,12 +37,12 @@
 
   .list a {
     text-decoration: none;
-    color: #000;
+    color: #fff;
     margin: 10px 0;
   }
 
   .list a:hover {
-    color: #fff;
+    color: #f6b93b;
   }
 
   .list li {
