--- a/base/public/css/registrar_sucursal.css
+++ b/base/public/css/registrar_sucursal.css
@@ -43,7 +43,7 @@ input{
     margin: 15px;
     padding: 5px;
     border: none;
-    border-bottom: 2px solid #f6b93b;
+    border-bottom: 2px solid #000;
     background: none;
     outline: none;
 }
@@ -54,7 +54,7 @@ textarea{
     margin: 0 15px;
     padding: 5px;
     border: none;
-    border-bottom: 2px solid #f6b93b;
+    border-bottom: 2px solid #000;
     background: none;
     outline: none;
     resize: none;
